[package]
name = "mal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "12.0.0"
regex = "1.9.1"
itertools = "0.11.0"

[[bin]]
name = "step0_repl"
path = "src/step0_repl.rs"

[[bin]]
name = "step1_read_print"
path = "src/step1_read_print.rs"
